k3s/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: media
  labels:
    app: immich
spec:
  type: LoadBalancer
  selector:
    app: immich
  ports:
    - name: web
      port: 9100
      targetPort: 2283
      protocol: TCP
