k3s/apps/immich/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: media
  labels:
    app: immich-valkey
spec:
  type: ClusterIP
  selector:
    app: immich-valkey
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
