k3s/apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: immich
          port: 9100
  tls:
    secretName: wildcard-home-ijlalahmad-dev-tls
